--- a/Urbahns Development/index.html
+++ b/Urbahns Development/index.html
@@ -14,7 +14,7 @@
     <div class="main">
         <div class="header">
             <div class="logo">
-                <img src="images/logo.jpg" alt="logo">
+                <img src="./images/logo.jpg" alt="logo">
             </div>
             <div class="navbar">
                 <ul>
@@ -41,7 +41,7 @@
         </div>
         <div class="section1">
             <div class="house">
-                <img src="images/house.png" alt="house">
+                <img src="./images/house.png" alt="house">
             </div>
             <div class="house-content">
                 <h4>Who we are</h4>
@@ -68,21 +68,21 @@
             </div>
             <div class="about-box">
                 <div class="inner-box1">
-                    <img src="images/property.png" alt="property">
+                    <img src="./images/property.png" alt="property">
                     <h1>Property Management</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatibus consequatur, quasi
                         dolorem tempore quis eaque quod. Libero ratione quae exercitationem modi rem sunt necessitatibus
                         nam dignissimos, perspiciatis et repellat.</p>
                 </div>
                 <div class="inner-box2">
-                    <img src="images/management.png" alt="management">
+                    <img src="./images/management.png" alt="management">
                     <h1>Construction Management</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatibus consequatur, quasi
                         dolorem tempore quis eaque quod. Libero ratione quae exercitationem modi rem sunt necessitatibus
                         nam dignissimos, perspiciatis et repellat.</p>
                 </div>
                 <div class="inner-box3">
-                    <img src="images/investment.png" alt="investment">
+                    <img src="./images/investment.png" alt="investment">
                     <h1>Investor Support</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatibus consequatur, quasi
                         dolorem tempore quis eaque quod. Libero ratione quae exercitationem modi rem sunt necessitatibus
@@ -99,7 +99,7 @@
         <div class="section3">
             <div class="about-us">
                 <div class="about-logo">
-                    <img src="images/logo.jpg" alt="logo">
+                    <img src="./images/logo.jpg" alt="logo">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias corporis quam alias dolorum sit, ipsum non, odio consequuntur perspiciatis quasi neque aut. Corrupti illo dolorum suscipit quos aut ducimus quam.</p>
                     <ul>
                         <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
